# gitlab-analytics

./: .Makefile.swp  .gitignore  .gitlab-ci.yml  CODEOWNERS  Makefile  README.md  docker-compose.yml  pyproject.toml  test.py
transform/snowflake-dbt/: .gitignore  .sqlfluff  Makefile  README.md  construct_seed_docs.py  dbt_dependency_check.py  dbt_project.yml  development_commands.zsh  docs-packages.yml  file.txt  package-lock.yml  packages.yml  pyproject.toml  removal.txt  safe_model_check.py  safe_models.json  selectors.yml  snowflake-dbt-ci.yml  zengrc_assessment_source
transform/snowflake-dbt/data/: department_name_changes.csv  engineering_analytics_workflow_labels.csv  excluded.csv  fy24_mock_crm_users.csv  fy24_mock_opportunities.csv  fy25_sfdc_sandbox_user_roles_hierarchy.csv  fy25_sfdc_sandbox_users_hierarchy.csv  gcp_billing_ai_mapping.csv  gcp_billing_folder_pl_mapping.csv  gcp_billing_haproxy_pl_mapping.csv  gcp_billing_hierarchy.csv  gcp_billing_infra_pl_mapping.csv  gcp_billing_project_pl_mapping.csv  gcp_billing_sandbox_projects.csv  gcp_billing_single_sku_pl_mapping.csv  gcp_billing_unit_mapping.csv  gitlab_dotcom_xmau_metrics_common.csv  handbook_file_classification_mapping.csv  health_score_metrics.csv  internal_gitlab_namespaces.csv  internal_gitlab_projects.csv  license_md5_overwrite_temp.csv  overwrite_expired_subscription.csv  projects_part_of_product.csv  seeds.md  seeds.yml  snowflake_non_team_member_user_types.csv  test_employee_ids.csv  valid_tags.csv
transform/snowflake-dbt/docs/: index.html
transform/snowflake-dbt/models/: overview.md  (+2 more)
(+2834 files in other folders)
