[tool.poetry]
name = "analytics"
version = "1.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10.3"
dbt-snowflake = "1.6.4"
dbt-core= "1.6.4"
gitlabdata = "0.3.28"
loguru = "0.6.0"
pandas = "1.4.2"
SQLAlchemy = "1.4.46"
sqlfluff = "1.4.5"
sqlfluff-templater-dbt = "1.4.5"
simple-dependency-resolver = "0.1.1"
requests = "^2.31.0"

